--- a/MyResume/resume.html
+++ b/MyResume/resume.html
@@ -22,9 +22,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="C:\Dlithe Intern\images\girlpic.jpg" style="width:100%" alt="Avatar">
+            <img src="C:/Dlithe Intern/images/girlpic.jpg" style="width:100%" alt="Nagaveni H">
+
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Nagaveni H </h2>
+
+            <h2>Nagaveni</h2>
           </div>
         </div>
         <div class="w3-container">
